--- a/.github/workflows/CreateOnlineDevelopmentEnvironment.yaml
+++ b/.github/workflows/CreateOnlineDevelopmentEnvironment.yaml
@@ -50,7 +50,7 @@ jobs:
       telemetryScopeJson: ${{ steps.init.outputs.telemetryScopeJson }}
     steps:
       - name: Dump Workflow Information
-        uses: spetersenms/AL-Go/Actions/DumpWorkflowInfo@NoJobSummaryOnNoTestsFound
+        uses: spetersenms/AL-Go/Actions/DumpWorkflowInfo@DeployToEnvVar
         with:
           shell: powershell
 
@@ -59,19 +59,19 @@ jobs:
 
       - name: Initialize the workflow
         id: init
-        uses: spetersenms/AL-Go/Actions/WorkflowInitialize@NoJobSummaryOnNoTestsFound
+        uses: spetersenms/AL-Go/Actions/WorkflowInitialize@DeployToEnvVar
         with:
           shell: powershell
 
       - name: Read settings
         id: ReadSettings
-        uses: spetersenms/AL-Go/Actions/ReadSettings@NoJobSummaryOnNoTestsFound
+        uses: spetersenms/AL-Go/Actions/ReadSettings@DeployToEnvVar
         with:
           shell: powershell
 
       - name: Read secrets
         id: ReadSecrets
-        uses: spetersenms/AL-Go/Actions/ReadSecrets@NoJobSummaryOnNoTestsFound
+        uses: spetersenms/AL-Go/Actions/ReadSecrets@DeployToEnvVar
         with:
           shell: powershell
           gitHubSecrets: ${{ toJson(secrets) }}
@@ -90,7 +90,7 @@ jobs:
             Write-Host "AdminCenterApiCredentials not provided, initiating Device Code flow"
             $ALGoHelperPath = "$([System.IO.Path]::GetTempFileName()).ps1"
             $webClient = New-Object System.Net.WebClient
-            $webClient.DownloadFile('https://raw.githubusercontent.com/spetersenms/AL-Go/NoJobSummaryOnNoTestsFound/Actions/AL-Go-Helper.ps1', $ALGoHelperPath)
+            $webClient.DownloadFile('https://raw.githubusercontent.com/spetersenms/AL-Go/DeployToEnvVar/Actions/AL-Go-Helper.ps1', $ALGoHelperPath)
             . $ALGoHelperPath
             DownloadAndImportBcContainerHelper
             $authContext = New-BcAuthContext -includeDeviceLogin -deviceLoginTimeout ([TimeSpan]::FromSeconds(0))
@@ -112,13 +112,13 @@ jobs:
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
 
       - name: Read settings
-        uses: spetersenms/AL-Go/Actions/ReadSettings@NoJobSummaryOnNoTestsFound
+        uses: spetersenms/AL-Go/Actions/ReadSettings@DeployToEnvVar
         with:
           shell: powershell
 
       - name: Read secrets
         id: ReadSecrets
-        uses: spetersenms/AL-Go/Actions/ReadSecrets@NoJobSummaryOnNoTestsFound
+        uses: spetersenms/AL-Go/Actions/ReadSecrets@DeployToEnvVar
         with:
           shell: powershell
           gitHubSecrets: ${{ toJson(secrets) }}
@@ -137,7 +137,7 @@ jobs:
           Add-Content -Encoding UTF8 -Path $env:GITHUB_OUTPUT -value "adminCenterApiCredentials=$adminCenterApiCredentials"
 
       - name: Create Development Environment
-        uses: spetersenms/AL-Go/Actions/CreateDevelopmentEnvironment@NoJobSummaryOnNoTestsFound
+        uses: spetersenms/AL-Go/Actions/CreateDevelopmentEnvironment@DeployToEnvVar
         with:
           shell: powershell
           token: ${{ steps.ReadSecrets.outputs.TokenForPush }}
@@ -149,7 +149,7 @@ jobs:
 
       - name: Finalize the workflow
         if: always()
-        uses: spetersenms/AL-Go/Actions/WorkflowPostProcess@NoJobSummaryOnNoTestsFound
+        uses: spetersenms/AL-Go/Actions/WorkflowPostProcess@DeployToEnvVar
         env:
           GITHUB_TOKEN: ${{ github.token }}
         with:
