[main@9d52e81] Update AL-Go System Files from spetersenms/AL-Go@testEnvVar - 5ab4dd1

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -27,6 +27,7 @@ jobs:
         environmentsMatrixJson: ${{ steps.SetMatrix.outputs.EnvironmentsMatrixJson }}
       steps:
       - name: SetMatrix
+        id: SetMatrix
         shell: pwsh
         run: |
           $environmentsMatrixJson = '{"matrix":{"include":[{"environment":"testEnv","os":"[\"windows-latest\"]","shell":"powershell"}]},"fail-fast":false}'
