[main@9a0ffa0] Update AL-Go System Files from spetersenms/AL-Go@testEnvVar - e0a262a

--- a/.github/workflows/Troubleshooting.yaml
+++ b/.github/workflows/Troubleshooting.yaml
@@ -30,7 +30,7 @@ jobs:
           lfs: true
 
       - name: Troubleshooting
-        uses: spetersenms/AL-Go/Actions/Troubleshooting@ExtendedDebugLogging
+        uses: spetersenms/AL-Go/Actions/Troubleshooting@testEnvVar
         with:
           shell: powershell
           gitHubSecrets: ${{ toJson(secrets) }}
