[main@052f6a3] Update AL-Go System Files from spetersenms/AL-Go@FixDeployFromPRRefName - 2ec405b

--- a/.github/AL-Go-Settings.json
+++ b/.github/AL-Go-Settings.json
@@ -1,12 +1,12 @@
 {
-  "$schema": "https://raw.githubusercontent.com/spetersenms/AL-Go/OnlyPurgeALGoContainers/Actions/settings.schema.json",
+  "$schema": "https://raw.githubusercontent.com/spetersenms/AL-Go/FixDeployFromPRRefName/Actions/settings.schema.json",
   "type": "PTE",
-  "templateUrl": "https://github.com/spetersenms/AL-Go@OnlyPurgeALGoContainers",
+  "templateUrl": "https://github.com/spetersenms/AL-Go@FixDeployFromPRRefName",
   "generateDependencyArtifact": true,
   "incrementalBuilds": {
     "onPush": true,
     "onPull_Request": true,
     "mode": "modifiedApps"
   },
-  "templateSha": "aceeb3d00135a6d790cfca59d7dce0d198100009"
+  "templateSha": "2ec405b137a66669599f10c48ff7ffd319bf0642"
 }
