--- a/.github/workflows/CreateTestApp.yaml
+++ b/.github/workflows/CreateTestApp.yaml
@@ -53,7 +53,7 @@ jobs:
     runs-on: [ windows-latest ]
     steps:
       - name: Dump Workflow Information
-        uses: spetersenms/AL-Go/Actions/DumpWorkflowInfo@OnlyPurgeALGoContainers
+        uses: spetersenms/AL-Go/Actions/DumpWorkflowInfo@FixDeployFromPRRefName
         with:
           shell: powershell
 
@@ -62,18 +62,18 @@ jobs:
 
       - name: Initialize the workflow
         id: init
-        uses: spetersenms/AL-Go/Actions/WorkflowInitialize@OnlyPurgeALGoContainers
+        uses: spetersenms/AL-Go/Actions/WorkflowInitialize@FixDeployFromPRRefName
         with:
           shell: powershell
 
       - name: Read settings
-        uses: spetersenms/AL-Go/Actions/ReadSettings@OnlyPurgeALGoContainers
+        uses: spetersenms/AL-Go/Actions/ReadSettings@FixDeployFromPRRefName
         with:
           shell: powershell
 
       - name: Read secrets
         id: ReadSecrets
-        uses: spetersenms/AL-Go/Actions/ReadSecrets@OnlyPurgeALGoContainers
+        uses: spetersenms/AL-Go/Actions/ReadSecrets@FixDeployFromPRRefName
         with:
           shell: powershell
           gitHubSecrets: ${{ toJson(secrets) }}
@@ -81,7 +81,7 @@ jobs:
           useGhTokenWorkflowForPush: '${{ github.event.inputs.useGhTokenWorkflow }}'
 
       - name: Creating a new test app
-        uses: spetersenms/AL-Go/Actions/CreateApp@OnlyPurgeALGoContainers
+        uses: spetersenms/AL-Go/Actions/CreateApp@FixDeployFromPRRefName
         with:
           shell: powershell
           token: ${{ steps.ReadSecrets.outputs.TokenForPush }}
@@ -95,7 +95,7 @@ jobs:
 
       - name: Finalize the workflow
         if: always()
-        uses: spetersenms/AL-Go/Actions/WorkflowPostProcess@OnlyPurgeALGoContainers
+        uses: spetersenms/AL-Go/Actions/WorkflowPostProcess@FixDeployFromPRRefName
         env:
           GITHUB_TOKEN: ${{ github.token }}
         with:
